         alias for AVCodecID (Sergio).
20140414 tape2wav.c: correct default WAV sample rate (thanks, Alberto Garcia)
         (patch #324) (Santiago Vila).
20140424 fmfconv.c: correct vga resolution (Sergio).
20140507 m4/iconv.m4: update iconv to version from gettext-0.18.2 (Fred).
20140507 autogen.sh: select glibtoolize where required (Sergio).
20140511 m4/{Makefile.am,lib-ld.m4,lib-link.m4,lib-prefix.m4}: ensure
         definitions of AC_LIB_PREPARE_PREFIX, AC_LIB_RPATH,
         AC_LIB_LINKFLAGS_BODY and AC_LIB_APPENDTOVAR are always available
         (patch #325) (Fred).
20140511 autogen.sh: fix line break (Sergio).
20140706 configure.ac,fmfconv_ff.c: add libav10 support (thanks, Alberto Garcia)
         (Anton Khirnov and Sergio).
20150411 compat/win32/distribution.mk: prefer groff over man2html (Sergio).
20150412 Makefile.am,configure.ac,fmfconv.[c|h],
         fmfconv_[aiff|au|avi|ff|jpg|png|ppm|wav|yuv].c: support JPEG, PNG and
         AVI output formats. New internal sound resampling. Allow greyscale
         output (patch #329) (Gergely Szasz).
20150419 man/fmfconv.1: add missing options and arrange options in categories
         (Sergio).
20150419 audio2tape.cc,createhdf.c,fmfconv.c,listbasic.c,raw2hdf.c,rzxtool.c,
         snap2tzx.c,snapconv.c,tape2wav.c,tapeconv.c: abort program when passed
         unknown options (fixes bug #318) (thanks, Stuart) (Sergio).
20150422 fmfconv.c,man/fmfconv.1: set default output type to AVI instead of 
         YUV4MPEG2 when using pipes. Move --force-resample and --srate options
         (more from patch #329) (Gergely Szasz).
20150423 man/fmfconv.1: add more details on DESCRIPTION, EXAMPLES and SEE ALSO
         (thanks, Gergely Szasz) (Sergio).
20150423 fmfconv.c: set output mode to AVI when using .avi file extension
         (Sergio).
20150426 fmfconv.[c|h],fmfconv_[ff|jpg|png].c: implement --version option in
         fmfconv (more from patch #329) (Gergely Szasz).