@@ -1707,7 +1707,14 @@ prepare_next_file( void )		/* multiple input file */
 static void
 print_version( void )
 {
-  printf( "fmfconv version " FMFCONV_VER_STRING "\n" );
+  printf(
+    "fmfconv (" PACKAGE " " PACKAGE_VERSION ") " FMFCONV_VER_STRING "\n"
+    "Copyright (c) 2004-2005 Gergely Szasz\n"
+    "License GPLv2+: GNU GPL version 2 or later "
+    "<http://gnu.org/licenses/gpl.html>\n"
+    "This is free software: you are free to change and redistribute it.\n"
+    "There is NO WARRANTY, to the extent permitted by law.\n" );
+
 #if defined USE_FFMPEG || defined USE_LIBPNG || defined USE_LIBPNG
   printf( "Compiled with:\n" );
 #else
